<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Look at my GUI</string>
    <string name="ButtonText">Click here</string>
    <string name="CheckBoxText">Check this out!</string>
    <string name="FlagName">Canadian Flag</string>
    <string name="SwitchText">Switch on / off</string>
    <string name="TextFieldHint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="checkbox_ON_message">Checkbox is checked</string>
    <string name="checkbox_OFF_message">Checkbox is unchecked</string>
    <string name="switch_ON_message">Switch button is ON</string>
    <string name="switch_OFF_message">Switch button is OFF</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="imageButtonLabel">Click the button above to take a picture</string>
    <string name="imageDescription">Picture from device\'s camera</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="login">Login</string>
    <string name="delete_confirmation">Do you want to delete this?</string>
    <string name="row_info_text">The selected row is: </string>
    <string name="database_info_text">\nThe database id is: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send_btn">Send</string>
    <string name="type_here_hint">Type here</string>
    <string name="receive_btn">Receive</string>
    <string name="go_to_chat_btn">Go to chat</string>
    <string name="buttonWeatherForecastText">Weather Forecast</string>
    <string name="current_weather">Current Weather</string>
    <string name="aButton"> Hello there</string>
    <string name="Name">Name</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message Here</string>
</resources>